--- a/nick/nick.css
+++ b/nick/nick.css
@@ -21,7 +21,7 @@ body{	background-image: url("IMG_0561.jpg");
 		height: 50%;
 		vertical-align: middle;}
 
-@media screen and (min-width: 50% and max-width:75%){
+@media screen and (min-width: 50%) and( max-width:75%){
 		body{
 		font-family: sans-serif;
 		color: lightblue;
